--- a/pithermo/package.json
+++ b/pithermo/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.11",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.2",
     "morgan": "~1.9.0"
